...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/earnOfTrain"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1" />

            <android.support.v7.widget.CardView
                android:id="@+id/export"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:foreground="@drawable/card_foreground"
...
