<resources>
    <string name="activity_training_history_name">История тренировок</string>
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
...
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>

    <string name="making_presentation">making_presentation</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Желательный темп речи</string>

...
