<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_page_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".StartPageActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_startpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:longClickable="true"
        android:paddingBottom="100dp"
        android:visibility="visible"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" >

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:visibility="gone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent" />

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/addBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="right|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/pdf_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</FrameLayout>